IBX-1527: Fix dropdown trunkating too much of a selected text (#234)

--- a/src/bundle/Resources/public/scss/_dropdown.scss
+++ b/src/bundle/Resources/public/scss/_dropdown.scss
@@ -105,7 +105,7 @@
         @include tag;
 
         margin-top: 0;
-        padding-left: 0;
+        padding-left: calculateRem(8px);
         margin-right: calculateRem(8px);
         display: inline-block;
         max-width: calculateRem(380px);
@@ -124,6 +124,8 @@
         color: $ibexa-color-black-300;
         background: transparent;
         border: 0;
+        padding-right: 0;
+        padding-left: 0;
 
         .ibexa-dropdown__remove-selection {
             display: none;
